--- a/gb/10/7/26/n2976689.md
+++ b/gb/10/7/26/n2976689.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>鲜为人知的马克思之六：信神的马克思</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2018年05月11日讯】我们的心、理性、历史、基督的道都响亮而令人信服地告诉我们，和基督一致是绝对必要的，没有这种一致我们就不能够达到我们的目的，没有这种一致我们就会被上帝抛弃，而只有上帝才能够拯救我们。<br />
-——<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%A9%AC%E5%85%8B%E6%80%9D.md#1">马克思</a></p>
-<p>许多人只知道成年后的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%A9%AC%E5%85%8B%E6%80%9D.md#1">马克思</a>是个有名的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%97%A0%E7%A5%9E%E8%AE%BA.md#1">无神论</a>者，对宗教始终持敌视和反对的态度，他的“宗教是麻醉人民的鸦片”的著名论断，为共产党国家打压宗教奠定了理论基础，也可以说是宗教信仰在这些国家遭受迫害的苦难之源，但他们却不知道，上大学前的马克思也曾是一名信神的虔诚基督徒。</p>
+	<p>【大纪元2018年05月11日讯】我们的心、理性、历史、基督的道都响亮而令人信服地告诉我们，和基督一致是绝对必要的，没有这种一致我们就不能够达到我们的目的，没有这种一致我们就会被上帝抛弃，而只有上帝才能够拯救我们。<br />
+——<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A9%AC%E5%85%8B%E6%80%9D.md#1">马克思</a></p>
+<p>许多人只知道成年后的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A9%AC%E5%85%8B%E6%80%9D.md#1">马克思</a>是个有名的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%97%A0%E7%A5%9E%E8%AE%BA.md#1">无神论</a>者，对宗教始终持敌视和反对的态度，他的“宗教是麻醉人民的鸦片”的著名论断，为共产党国家打压宗教奠定了理论基础，也可以说是宗教信仰在这些国家遭受迫害的苦难之源，但他们却不知道，上大学前的马克思也曾是一名信神的虔诚基督徒。</p>
 <p>马克思出生和成长在一个富有宗教氛围的家庭和社会里，父母都是犹太人，双方都是有着浓厚犹太教传统的家族的后代。在马克思父亲这方面，“16世纪以来的几乎所有的特利尔拉比（注：拉比是犹太教社团的精神领袖或宗教导师）都是马克思的先辈”，（1）只不过他本人很早就与家庭断绝了联系，受犹太思想传统的影响并不多。儿子出生后，马克思的父亲为了避开国家对犹太人从事法律事务的限制，方便从事法律工作，选择做了一名新教徒，并在1817年8月之前受了洗。</p>
-<p>尽管马克思的父亲深受18世纪法国关于政治、宗教、生活、艺术的自由思想的影响，但他对上帝依然有着虔诚的信仰。他曾在写给马克思的一封信中说过，“毕竟对上帝的虔诚信仰是道德的巨大动力。你知道，我远非狂热的宗教信徒。但是，这种信仰迟早都会成为一个人的真正〔需〕要，生活中往往有这种时候，甚至一个<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%97%A0%E7%A5%9E%E8%AE%BA.md#1">无神论</a>者也会〔不知〕不觉地拜倒在至高无上的神面前。这通常之所以会这样〔……〕，是因为每一个人〔……〕都有可能崇拜牛顿、洛克和莱布尼茨所信仰过的东西。”（2）</p>
+<p>尽管马克思的父亲深受18世纪法国关于政治、宗教、生活、艺术的自由思想的影响，但他对上帝依然有着虔诚的信仰。他曾在写给马克思的一封信中说过，“毕竟对上帝的虔诚信仰是道德的巨大动力。你知道，我远非狂热的宗教信徒。但是，这种信仰迟早都会成为一个人的真正〔需〕要，生活中往往有这种时候，甚至一个<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%97%A0%E7%A5%9E%E8%AE%BA.md#1">无神论</a>者也会〔不知〕不觉地拜倒在至高无上的神面前。这通常之所以会这样〔……〕，是因为每一个人〔……〕都有可能崇拜牛顿、洛克和莱布尼茨所信仰过的东西。”（2）</p>
 <p>1824年，马克思也受洗做了一名基督徒。大约12岁时，他进了家乡的弗里德里希-威廉中学读书。这是一所耶稣会学校，同学中有五分之四的人是天主教徒，宗教是必修课程之一，约瑟夫?居佩尔牧师负责讲授这门课，也是他在1834年3月给马克思施行了坚信礼。从保存下来的特利尔中学学生毕业证书上看，校方对于马克思的宗教知识的评价是：“他对基督教教义和训诫认识明确，并能加以论证；对基督教教会的历史也有相当程度的了解。”（3）</p>
 <p>在这种环境中长大的少年马克思，对上帝有着与一般基督徒相同的虔诚信仰自然是不足为奇的，而最能够证明这一点的倒还不是校方对他的评价，而是他本人写于1835年夏天的一篇毕业作文──《根据约翰福音第15章第1至14节论信徒和基督的一致，这种一致的原因和实质，它的绝对必要及其影响》。</p>
 <p>这篇作文阐述了基督教信仰对于人类道德的全面发展的意义。围绕着这一主题，马克思首先肯定了信徒和基督一致的必要性。为此，他列举了三方面的理由。</p>
@@ -29,47 +29,46 @@
 （6）《马克思恩格斯全集》中文第一版，第40卷第820页<br />
 （7）《马克思恩格斯全集》中文第一版，第40卷第822页</p>
 <p>责任编辑：李天琦</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/10/7/23/n2974541.md#1">鲜为人知的马克思之五：自私的马克思</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/10/7/23/n2974481.md#1">鲜为人知的马克思之四：好斗的马克思</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/10/7/14/n2965989.md#1">鲜为人知的马克思之三：虚荣的马克思</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/10/7/10/n2962557.md#1">鲜为人知的马克思之二：自大的马克思</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/10/7/10/n2962346.md#1">鲜为人知的马克思之一：专制的马克思</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/7/10/n2962346.md#1">鲜为人知的马克思之一：专制的马克思</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/7/10/n2962557.md#1">鲜为人知的马克思之二：自大的马克思</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/7/14/n2965989.md#1">鲜为人知的马克思之三：虚荣的马克思</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/7/23/n2974481.md#1">鲜为人知的马克思之四：好斗的马克思</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/10/11/11/n3081500.md#1">荷学者新著述中国大饥荒苦难史</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/2/8/n8788821.md#1">大饥荒死亡人数或超四千万 中共内部数据泄密</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/13/n10479888.md#1" target="_blank">王锐：“儿童政治犯”的故事</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/7/20/n9444375.md#1" target="_blank">《观察家》：法轮功修炼者的非凡勇气和坚韧</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10965227.md#1" target="_blank">林启山：刘义元卖妻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/28/n11415000.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（上）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/7/26/n2976689.htm">鲜为人知的马克思之六：信神的马克思</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/7/26/n2976689.htm">鲜为人知的马克思之六：信神的马克思</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/10/7/26/n2976689.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/10/7/26/n2976689.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
